Timestamp & word break in chat, fixed user mode
* Fixed user mode change
* Added timestamp to chat
* Fixed word break in chat

--- a/IRC_Clone/css/style.css
+++ b/IRC_Clone/css/style.css
@@ -41,6 +41,7 @@ body {
 
 .row {
     padding-top: 10px;
+    word-break: break-all;
 }
 
 #chat-frame strong, #user-list li {
